--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 fastapi = "==0.116.1"
 pydantic = {extras = ["email"], version = "==2.11.7"}
 uvicorn = "==0.35.0"
+pytz = "==2025.2"
 
 [dev-packages]
 ipykernel = "*"
