Define routes for creating and retrieving a Poll model.
Details:
1. Using redis to persist poll data.
2. Define utility methods to save and get poll data.

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ fastapi = "==0.116.1"
 pydantic = {extras = ["email"], version = "==2.11.7"}
 uvicorn = "==0.35.0"
 pytz = "==2025.2"
+redis = "==6.4.0"
 
 [dev-packages]
 ipykernel = "*"
